styles.css
* {
  margin: 0;
  padding: 0;
}

/* @media only screen and (min-width: 768px){
} */

@media only screen and (min-width: 375px) {
  .flex-header {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    padding: 0;
    margin: 0;
    list-style: none;
  }

  .img-header {
    flex-grow: 2;
  }

  .ic-menu {
    flex-grow: 2;
    padding-top: 25px;
    padding-right: 25px;
  }

  .flex-main {
    display: flex;
    flex-flow: column wrap;
    gap: 15px;
  }

  .name {
    /* Charlie Giorgania */
    font-family: 'Playfair Display', serif;
    font-style: normal;
    font-weight: 400;
    font-size: 50px;
    line-height: 100%;
    color: #1a2236;
    margin-top: 30px;
    margin-bottom: 10px;
    margin-left: 15px;
    width: 80%;
  }

  .greetings {
    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 400;
    font-size: 14px;
    line-height: 21px;
    letter-spacing: -0.01em;
    color: #1a2236;
    margin-left: 20px;
    margin-right: 20px;
    display: flex;
    flex-direction: column;
    gap: 10px;
  }

  .button-collaboration {
    width: 80%;
    align-self: center;
    background: #1a2236;
    color: #fff;
    padding: 15px;
    font-family: 'Poppins', sans-serif;
    font-size: 18px;
    font-weight: 500;
    line-height: 27px;
    letter-spacing: 0.5em;
    text-align: center;
    border: 1px hidden;
  }

  .button-collaboration:hover {
    background: #fff;
    color: #1a2236;
    font-weight: 500;
    border: solid 1px #1a2236;
  }
}

